# hw_tasks_bmstu

./: .gitignore  CMakeLists.txt  CTDRNN.ipynb  CTDRNN.py  MemoryPolynomialNNTrainer.ipynb  MemoryPolynomialNNTrainer.py  MemoryPolynomialTransformerTrainer.py  NeuralODETrainer (2).py  README.md  SparseDelayMemoryPolynomial.py  ctdnn_model.pth  main (1).ipynb  main (9).ipynb  main.ipynb  main.py  node_model.py  report.ipynb  requirements.txt  research.ipynb  rvftdnn_model_0_002_real_0_001_imag.pth  saved_ctdrnn_model.pth  task-Copy1.ipynb  task.ipynb  tasks_antenna.md  tasks_circuit.md  test.py  test_ctdrnn.py  test_model.py  test_model.spec  training_history.csv
.ipynb_checkpoints/: MemoryPolynomialNNTrainer-checkpoint.ipynb  NeuralODETrainer (2)-checkpoint.py  TestMLflow-checkpoint.ipynb  logs_copy-checkpoint.txt  main (1)-checkpoint.ipynb  main (8)-checkpoint.ipynb  main (9)-checkpoint.ipynb  main-checkpoint.ipynb  main-checkpoint.py  research-checkpoint.ipynb  task-checkpoint.ipynb
.virtual_documents/: main.ipynb
CTDNN/: CTDNN.h  Makefile  main.cpp  main_1.cpp  main_2.cpp  main_cpu.cpp
Logs/: загруженное.txt
MemoryPolynomial/: CreateModel.py  DefaultSimpleMLP.py  LogsTensorboard.py  MemoryPolynomial.py  ModelEvalutor.py  ModelTrainer.py  PolynomialDataset.py  main.py
RVTDNN/: ComplexDataset.py  CreateModel.py  LogsTensorboard.py  ModelEvalutor.py  ModelTrainer.py  RVTDNNModel.py  main.py  test.py
TypePolynomialModel/: EnvelopeMemoryPolynomialModel.py  ExponentiallyShapedMemoryDelayProfileModel.py  OrthogonalMemoryPolynomialModel.py  SparseDelayMemoryPolynomialModel.py
TypePolynomialModelC/: CMakeLists.txt  EnvelopeMemoryPolynomialModel.cpp  HybridMemoryPolynomialModel.cpp  OrthogonalMemoryPolynomialModel.cpp  SparseDelayMemoryPolynomialModel.cpp  logs.txt  min_rmse_summary.csv
TypePolynomialModelC/.ipynb_checkpoints/: logs_copy-checkpoint.txt  logs_summary-checkpoint.csv
TypePolynomialModelC/logs/: logs_copy.txt  logs_summary.csv
TypePolynomialModelC/src/: DDRVolterraModel.cpp  ExponentiallyShapedMemoryDelayProfileModel.cpp  GeneralizedMemoryPolynomialModel.cpp  NonUniformMemoryPolynomialModel.cpp  PolynomialMemoryModel.cpp
TypePolynomialModelPython/: DDRVolterraModel.py  ExponentiallyShapedMemoryDelayProfileModel.py  GeneralizedMemoryPolynomialModel.py  HybridMemoryPolynomialModel.py  NonUniformMemoryPolynomialModel.py  OrthogonalMemoryPolynomialModel.py  PolynomialMemoryModel.py  SparseDelayMemoryPolynomialModel.py  logs.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
file/: answer_1.txt  answer_2.txt  answer_3.txt  answer_4.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt
history/: .~lock.model_parameters_20241009_200105.csv#  model_parameters_20241009_200105.csv  model_parameters_20241010_135332_31ea537a-a50d-42a9-8bd0-804dab4e9e36.csv  model_parameters_20241012_083845_670a4faa-6a3d-46e1-b982-8814554f0953.csv  model_parameters_20241012_084247_d8ca82eb-8c7e-490a-b13d-3b256582ea51.csv  model_parameters_20241012_103917_b4c56f43-9664-4bec-ab54-39dbeee383e4.csv  model_parameters_20241013_101847_92477f2b-52d6-439a-8749-a7d96c443786.csv  model_parameters_20241013_152906_38c99d63-7d15-4ee3-97b7-32d7b1aaae99.csv  model_parameters_20241016_205710_c470d2c7-3e4a-4617-90cb-df6f48afe721.csv  model_parameters_20241023_212844_8ae6f487-dd36-43d7-8050-c7b001c63672.csv  predictions_20241006_123121.csv  predictions_20241006_123329.csv  predictions_20241006_124330_kaggle.csv  predictions_20241006_205728.csv  predictions_20241006_211406.csv  predictions_20241007_204139.csv  predictions_20241007_204222.csv  predictions_20241007_205214.csv  predictions_20241007_205342.csv  predictions_20241007_205639.csv  predictions_20241007_211642.csv  predictions_20241007_212201.csv  predictions_20241007_212935.csv  predictions_20241007_213034.csv  predictions_20241007_213237.csv  predictions_20241007_213427.csv  predictions_20241007_213529.csv  predictions_20241007_213710.csv  predictions_20241007_213943.csv  predictions_20241007_214157.csv  predictions_20241007_220944.csv  predictions_20241007_223000.csv  predictions_20241007_223132.csv  predictions_20241009_171801.csv  predictions_20241009_211218_ae14777f-c62e-48ba-a48c-830d5d950a48.csv  predictions_20241010_130248_718eee72-4509-4378-8de7-80208591e04d.csv  predictions_20241010_135435_31ea537a-a50d-42a9-8bd0-804dab4e9e36.csv  predictions_20241012_101209_670a4faa-6a3d-46e1-b982-8814554f0953.csv  predictions_20241012_113948_d8ca82eb-8c7e-490a-b13d-3b256582ea51.csv  predictions_20241012_115006_b4c56f43-9664-4bec-ab54-39dbeee383e4.csv  (+58 more)
models/: ctdnn_20240917_170701.pth  ctdrnn_20240917_163749.pth  ctdrnn_20240917_170422.pth  ctdrnn_20240923_112131.pth  node_20241006_102359.pth  node_20241006_111303.pth  node_20241006_121310.pth  node_20241006_122712.pth  node_20241006_123121.pth  (+15 more)
(+222 files in other folders)
